# WSReverseEngineeringClient

./: CMakeLists.txt  WildStarTypes.c  include.h  main.c  winhttp.h
FUN_140/FUN_1400/: WildStarRaw1.c  WildStarRaw2.c  WildStarRaw3.c
FUN_140/FUN_1401/: FUN_14010.c  WildStarRaw10.c  WildStarRaw11.c  WildStarRaw12.c  WildStarRaw13.c  WildStarRaw14.c  WildStarRaw15.c  WildStarRaw16.c  WildStarRaw17.c  WildStarRaw4.c  WildStarRaw5.c  WildStarRaw6.c  WildStarRaw7.c  WildStarRaw8.c  WildStarRaw9.c
FUN_140/FUN_1402/: FUN_14020.c  FUN_14021.c  WildStarRaw18.c  WildStarRaw19.c  WildStarRaw20.c  WildStarRaw21.c  WildStarRaw22.c  WildStarRaw23.c  WildStarRaw24.c  WildStarRaw25.c  WildStarRaw26.c  WildStarRaw27.c  WildStarRaw28.c  WildStarRaw29.c
FUN_140/FUN_1403/: FUN_14030.c  MultiplayerWindowHandlerFunction.c  WildStarRaw30.c  WildStarRaw31.c  WildStarRaw32.c  WildStarRaw33.c  WildStarRaw34.c  WildStarRaw35.c  WildStarRaw36.c  WildStarRaw37.c  WildStarRaw38.c  WildStarRaw39.c  WildStarRaw40.c  WildStarRaw41.c  WildStarRaw42.c  WildStarRaw43.c
FUN_140/FUN_1404/: FUN_14040.c  PlayerWindowHandlerFunction.c  WildStarRaw44.c  WildStarRaw45.c  WildStarRaw46.c  WildStarRaw47.c  WildStarRaw48.c  WildStarRaw49.c  WildStarRaw50.c  WildStarRaw51.c  WildStarRaw52.c  WildStarRaw53.c  WildStarRaw54.c  WildStarRaw55.c  WildStarRaw56.c  WildStarRaw57.c
FUN_140/FUN_1405/: CurrencyHandler.c  FUN_14050.c  WildStarRaw58.c  WildStarRaw59.c  WildStarRaw60.c  WildStarRaw61.c  WildStarRaw62.c  WildStarRaw63.c  WildStarRaw64.c  WildStarRaw65.c  WildStarRaw66.c  WildStarRaw67.c  WildStarRaw68.c  WildStarRaw69.c  WildStarRaw70.c
FUN_140/FUN_1406/: WildStarRaw70-ff.c  WildStarRaw71.c  WildStarRaw72.c  WildStarRaw73.c  WildStarRaw74.c  WildStarRaw75.c  WildStarRaw76.c  WildStarRaw77.c  WildStarRaw78.c  WildStarRaw79.c  WildStarRaw80.c  WildStarRaw81.c  WildStarRaw82 - FriendshipLib.c
FUN_140/FUN_1407/: WildStarRaw82-ff.c  WildStarRaw83 - CREDDExchangeLib + ChallangesLib.c  WildStarRaw84 - DialogRespone + ChatSystemLib.c  WildStarRaw85 - Housing + GroupLib.c  WildStarRaw86 - GuildLib.c  WildStarRaw87.c  WildStarRaw88.c  WildStarRaw89.c  WildStarRaw90.c  WildStarRaw91.c  WildStarRaw92.c  WildStarRaw93.c  WildStarRaw94.c  WildStarRaw95.c
FUN_140/FUN_1408/: FUN_14080.c  FUN_14081.c  FUN_14082.c  FUN_14089c.c  FUN_14089d.c  FUN_14089e.c  FUN_14089f.c  WildStarRaw100.c  WildStarRaw101.c  WildStarRaw102.c  WildStarRaw103.c  WildStarRaw104.c  WildStarRaw105.c  WildStarRaw96.c  WildStarRaw97.c  WildStarRaw98.c  WildStarRaw99.c
FUN_140/FUN_1409/: FUN_14090.c  FUN_14091.c  FUN_14092.c  FUN_14093.c  FUN_14094.c  FUN_14095.c
