cmake_minimum_required(VERSION 3.21)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(WildstarRE
        main.c
        include.h
        WildStarTypes.c
        FUN_140/FUN_1400/WildStarRaw1.c
        FUN_140/FUN_1400/WildStarRaw2.c
        FUN_140/FUN_1400/WildStarRaw3.c
        FUN_140/FUN_1401/WildStarRaw4.c
        FUN_140/FUN_1401/WildStarRaw6.c
        FUN_140/FUN_1401/WildStarRaw5.c
        FUN_140/FUN_1401/WildStarRaw7.c
        FUN_140/FUN_1401/WildStarRaw8.c
        FUN_140/FUN_1401/WildStarRaw9.c
        FUN_140/FUN_1401/WildStarRaw10.c
        FUN_140/FUN_1401/WildStarRaw11.c
        FUN_140/FUN_1401/WildStarRaw12.c
        FUN_140/FUN_1401/WildStarRaw13.c
        FUN_140/FUN_1401/WildStarRaw14.c
        FUN_140/FUN_1401/WildStarRaw15.c
        FUN_140/FUN_1401/WildStarRaw16.c
        FUN_140/FUN_1401/WildStarRaw17.c
        FUN_140/FUN_1402/WildStarRaw18.c
        FUN_140/FUN_1402/WildStarRaw19.c
        FUN_140/FUN_1402/WildStarRaw20.c
        FUN_140/FUN_1402/WildStarRaw21.c
        FUN_140/FUN_1402/WildStarRaw22.c
        FUN_140/FUN_1402/WildStarRaw23.c
        FUN_140/FUN_1402/WildStarRaw24.c
        FUN_140/FUN_1402/WildStarRaw25.c
        FUN_140/FUN_1402/WildStarRaw26.c
        FUN_140/FUN_1402/WildStarRaw27.c
        FUN_140/FUN_1402/WildStarRaw28.c
        FUN_140/FUN_1402/WildStarRaw29.c
        FUN_140/FUN_1403/WildStarRaw30.c
        FUN_140/FUN_1403/WildStarRaw31.c
        FUN_140/FUN_1403/WildStarRaw32.c
        FUN_140/FUN_1403/WildStarRaw33.c
        FUN_140/FUN_1403/WildStarRaw34.c
        FUN_140/FUN_1403/WildStarRaw35.c
        FUN_140/FUN_1403/WildStarRaw36.c
        FUN_140/FUN_1403/WildStarRaw37.c
        FUN_140/FUN_1403/WildStarRaw38.c
        FUN_140/FUN_1403/WildStarRaw39.c
        FUN_140/FUN_1403/WildStarRaw40.c
        FUN_140/FUN_1403/WildStarRaw41.c
        FUN_140/FUN_1403/WildStarRaw42.c
        FUN_140/FUN_1403/WildStarRaw43.c
        FUN_140/FUN_1404/WildStarRaw44.c
        FUN_140/FUN_1404/WildStarRaw45.c
        FUN_140/FUN_1404/WildStarRaw46.c
        FUN_140/FUN_1404/WildStarRaw47.c
        FUN_140/FUN_1404/WildStarRaw48.c
        FUN_140/FUN_1404/WildStarRaw49.c
        FUN_140/FUN_1404/WildStarRaw50.c
        FUN_140/FUN_1404/WildStarRaw52.c
        FUN_140/FUN_1404/WildStarRaw53.c
        FUN_140/FUN_1404/WildStarRaw54.c
        FUN_140/FUN_1404/WildStarRaw55.c
        FUN_140/FUN_1404/WildStarRaw56.c
        FUN_140/FUN_1404/WildStarRaw57.c
        FUN_140/FUN_1405/WildStarRaw58.c
        FUN_140/FUN_1405/WildStarRaw59.c
        FUN_140/FUN_1405/WildStarRaw60.c
        FUN_140/FUN_1405/WildStarRaw61.c
        FUN_140/FUN_1405/WildStarRaw62.c
        FUN_140/FUN_1405/WildStarRaw63.c
        FUN_140/FUN_1405/WildStarRaw64.c
        FUN_140/FUN_1405/WildStarRaw65.c
        FUN_140/FUN_1405/WildStarRaw66.c
        FUN_140/FUN_1405/WildStarRaw67.c
        FUN_140/FUN_1405/WildStarRaw68.c
        FUN_140/FUN_1405/WildStarRaw69.c
        FUN_140/FUN_1405/WildStarRaw70.c
        FUN_140/FUN_1406/WildStarRaw71.c
        FUN_140/FUN_1406/WildStarRaw72.c
        FUN_140/FUN_1406/WildStarRaw73.c
        FUN_140/FUN_1406/WildStarRaw74.c
        FUN_140/FUN_1406/WildStarRaw75.c
        FUN_140/FUN_1406/WildStarRaw76.c
        FUN_140/FUN_1406/WildStarRaw78.c
        FUN_140/FUN_1406/WildStarRaw79.c
        FUN_140/FUN_1406/WildStarRaw80.c
        FUN_140/FUN_1406/WildStarRaw81.c
        "FUN_140/FUN_1406/WildStarRaw82 - FriendshipLib.c"
        "FUN_140/FUN_1407/WildStarRaw83 - CREDDExchangeLib + ChallangesLib.c"
        "FUN_140/FUN_1407/WildStarRaw84 - DialogRespone + ChatSystemLib.c"
        "FUN_140/FUN_1407/WildStarRaw85 - Housing + GroupLib.c"
        "FUN_140/FUN_1407/WildStarRaw86 - GuildLib.c"
        FUN_140/FUN_1407/WildStarRaw87.c
        FUN_140/FUN_1407/WildStarRaw88.c
        FUN_140/FUN_1407/WildStarRaw89.c
        FUN_140/FUN_1407/WildStarRaw90.c
        FUN_140/FUN_1407/WildStarRaw91.c
        FUN_140/FUN_1407/WildStarRaw92.c
        FUN_140/FUN_1407/WildStarRaw93.c
        FUN_140/FUN_1407/WildStarRaw94.c
        FUN_140/FUN_1407/WildStarRaw95.c
        FUN_140/FUN_1408/WildStarRaw96.c
        FUN_140/FUN_1408/WildStarRaw97.c
        FUN_140/FUN_1404/WildStarRaw51.c
        FUN_140/FUN_1406/WildStarRaw77.c
        FUN_140/FUN_1408/WildStarRaw99.c
        FUN_140/FUN_1408/WildStarRaw98.c
        FUN_140/FUN_1408/WildStarRaw100.c
        FUN_140/FUN_1408/WildStarRaw101.c
        FUN_140/FUN_1408/WildStarRaw102.c
        FUN_140/FUN_1408/WildStarRaw103.c
        FUN_140/FUN_1408/WildStarRaw104.c
        FUN_140/FUN_1408/WildStarRaw105.c
        FUN_140/FUN_1409/FUN_14091.c
        FUN_140/FUN_1409/FUN_14093.c
        FUN_140/FUN_1409/FUN_14094.c
        FUN_140/FUN_1409/FUN_14090.c
        FUN_140/FUN_1409/FUN_14092.c
        FUN_140/FUN_1409/FUN_14095.c
        FUN_140/FUN_1408/FUN_14089c.c
        FUN_140/FUN_1408/FUN_14089d.c
        FUN_140/FUN_1408/FUN_14089e.c
        FUN_140/FUN_1408/FUN_14089f.c
        FUN_140/FUN_1408/FUN_14080.c
        FUN_140/FUN_1408/FUN_14081.c
        FUN_140/FUN_1408/FUN_14082.c
        FUN_140/FUN_1407/WildStarRaw82-ff.c
        FUN_140/FUN_1406/WildStarRaw70-ff.c
        FUN_140/FUN_1405/FUN_14050.c
        FUN_140/FUN_1404/FUN_14040.c
        FUN_140/FUN_1403/FUN_14030.c
        FUN_140/FUN_1402/FUN_14021.c
        FUN_140/FUN_1402/FUN_14020.c
        FUN_140/FUN_1401/FUN_14010.c
        winhttp.h)
